Complete WellMind IBM Hackathon: AI Care chat, automated wellness notifications, Hedera audit, and demo mode

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,23 @@
 # VorteX WellMind Environment Configuration
 # Copy this to .env and fill in your credentials
 
-# Flask Configuration
-FLASK_ENV=development
-FLASK_DEBUG=True
+# IBM Watson AI Care (for chatbot responses)
+AICARE_API_KEY=your_watson_orchestrate_api_key_here
 
-# Database
-DATABASE_URL=sqlite:///wellmind.db
-
-# IBM watsonx.ai (text generation)
+# IBM watsonx.ai (backend text generation)
 WATSONX_API_KEY=your_watsonx_api_key_here
 WATSONX_URL=https://us-south.ml.cloud.ibm.com/ml/v1/text/generation?version=2023-05-29
 WATSON_MODEL=ibm/granite-13b-chat-v2
 
-# IBM watsonx Orchestrate
+# IBM watsonx Orchestrate (automation workflows)
 ORCHESTRATE_API_KEY=your_orchestrate_api_key_here
 ORCHESTRATE_URL=https://api.ibm.com/orchestrate/v1/workflows/burnout-followup
 
-# Hedera
-HEDERA_ACCOUNT_ID=0.0.7301840
-HEDERA_PRIVATE_KEY=302e020100300506032b65700422....  # keep secret
-HEDERA_TOPIC_ID=0.0.7301961
+# Hedera Hashgraph (blockchain audit trail)
+HEDERA_ACCOUNT_ID=0.0.YOUR_ACCOUNT_ID
+HEDERA_PRIVATE_KEY=your_hedera_private_key_here
+HEDERA_TOPIC_ID=0.0.YOUR_TOPIC_ID
 
-# Frontend
-REACT_APP_API_URL=http://localhost:3000
-
-# IBM Orchestrate - AICare Agent
-AICARE_API_KEY=your_aicare_orchestrate_api_key_here
-AICARE_URL=https://api.ap-southeast-1.dl.watson-orchestrate.ibm.com/instances/<INSTANCE_ID>/v1/agents/<AGENT_ID>/interactions
-AICARE_AGENT_ID=<AGENT_ID>
+# Email Notifications (optional - for automated wellness emails)
+# Get this from Google Account > Security > 2-Step Verification > App Passwords
+GMAIL_APP_PASSWORD=your_gmail_app_password_here
