--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/nodemailer": "^7.0.4",
     "@types/react": "19.2.3",
+    "@types/react-dom": "^19.2.3",
     "autoprefixer": "10.4.7",
     "eslint": "8.0.1",
     "eslint-config-next": "13.0.0",
